--- a/package.json
+++ b/package.json
@@ -12,11 +12,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@zerolendxyz/core-v3": "^2.21.0",
-    "@zerolendxyz/periphery-v3": "^3.4.0",
-    "hardhat": "^2.22.12",
-    "hardhat-deploy": "^0.12.4",
-    "@openzeppelin/contracts": "^4.3.2",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
     "@nomicfoundation/hardhat-ignition": "^0.15.0",
@@ -24,13 +19,20 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@openzeppelin/contracts": "^4.3.2",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
     "@types/chai": "^4.2.0",
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=18.0.0",
+    "@zerolendxyz/core-v3": "^2.21.0",
+    "@zerolendxyz/periphery-v3": "^3.4.0",
     "chai": "^4.2.0",
+    "dotenv": "^16.4.5",
     "ethers": "^6.4.0",
+    "hardhat": "^2.22.12",
+    "hardhat-dependency-compiler": "^1.2.1",
+    "hardhat-deploy": "^0.12.4",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
