--- a/foundry.toml
+++ b/foundry.toml
@@ -1,7 +1,7 @@
 # Full reference https://github.com/foundry-rs/foundry/tree/master/crates/config
 
 [profile.default]
-  auto_detect_solc = false
+  auto_detect_solc = true
   block_timestamp = 1_680_220_800 # March 31, 2023 at 00:00 GMT
   bytecode_hash = "none"
   evm_version = "shanghai"
@@ -11,7 +11,7 @@
   optimizer_runs = 10_000
   out = "forge-build"
   script = "script"
-  solc = "0.8.19"
+  # solc = "0.8.19"
   src = "contracts"
   test = "test"
 libs = ["node_modules", "lib"]
