fixed unit tests for aero lp tokens and redeployed the codebase

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ forge-build
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
+solcInputs
