--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "compile": "SKIP_LOAD=true npx hardhat compile"
   },
   "author": "",
-  "license": "ISC",
+  "license": "GPL-3.0",
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
